# rob499_ws

./: .gitignore
log/: latest_build
sklearn-env/: pyvenv.cfg
src/hw2/: README.md  package.xml  setup.py
src/hw2/hw2/: limiter.py  oscope.py
src/hw3/: README.md  package.xml  setup.py
src/hw3/hw3/: data_receiver.py  data_sender.py
src/hw4/: package.xml  setup.py
src/hw4/hw4/: README.md  action_client.py  action_server.py  oscope.py
src/hw4/launch/: dont_launch_rocket.py  launch_oscopes.py  launch_rocket.py
src/hw5/: README.md  package.xml  setup.py
src/hw5/config/: hw5_rviz2_config.rviz
src/hw5/hw5/: intrusion_detector.py  laser_scan_filter.py  people_detector.py  personal_space_visualizer.py  take_intruder_pic.py
src/hw5/launch/: launch.py
src/hw6/: CMakeLists.txt  README.md  package.xml
src/hw6/launch/: comparison_launch.py  limited_oscope.py
src/hw6/src/: data_receiver.cpp  data_sender.cpp  limiter.cpp  oscope.cpp
src/hw7/: CMakeLists.txt  README.md  package.xml
src/hw7/src/: background_remover.cpp  table_remover.cpp
src/hw7_py/: package.xml  setup.cfg  setup.py
src/hw7_py/config/: hw7_config.rviz
src/hw7_py/hw7_py/: object_detector.py
src/hw7_py/launch/: bartender_launch.py
src/log/: latest_build
src/rob499_msgs/: CMakeLists.txt  package.xml
src/rob499_msgs/action/: LaunchRocket.action
src/rob499_msgs/msg/: TestPacket.msg
src/rob499_msgs/srv/: EnableLogging.srv  SendData.srv
src/rob499_project/: README.md  package.xml  setup.cfg  setup.py
src/rob499_project/launch/: turtle_launch.py  turtle_launch2.py
src/rob499_project/rob499_project/: change_pen.py  clear_path.py  knob1_node.py  knob2_node.py  serial_data_publisher.py  turtle_killer.py  turtle_movement.py
