<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hw3</name>
  <version>0.0.0</version>
  <description>hw3 for rob 499. baby's first service implementation</description>
  <maintainer email="hungatec@oregonstate.edu">hungatec</maintainer>
  <license>BSD-3-Clause</license>

  <exec_depend>std_msgs</exec_depend>
  <exec_depend>rclpy</exec_depend>
  <exec_depend>action_msgs</exec_depend>
  <exec_depend>datetime</exec_depend>
  <exec_depend>numpy</exec_depend>
  <exec_depend>builtin_interfaces</exec_depend>
  <exec_depend>csv</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
