<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hw6</name>
  <version>0.0.0</version>
  <description>A simple publisher/subscriber in C++</description>
  <maintainer email="hungatec@oregonstate.edu">hungatec</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <depend>rclcpp</depend>
  <depend>rcpcpp_action</depend>
  <depend>std_msgs</depend>  
  <depend>builtin_interfaces</depend>
  <depend>rob499_msgs</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
