<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>hw7</name>
  <version>0.0.0</version>
  <description>hw7: identifyinng cylinders on a table; c++ nodes</description>
  <maintainer email="coryjhungate@gmail.com">hungatec</maintainer>
  <license>BSD-3-Clause</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

    <depend>rclcpp</depend>
    <depend>std_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_1.12</depend>
    <depend>visualization_msgs</depend>
    <depend>tf2</depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
